# SummarizeGPT

./: .editorconfig  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  summarize_directory.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  entrypoint.sh
.devcontainer/config/: mypy.ini  pyproject.toml  requirements-dev.txt
.devcontainer/scripts/: lint.sh  setup-dev.sh  test.sh
.github/workflows/: publish.yml  python-app.yml
scripts/: lint.sh  setup-dev.sh  test.sh
summarizeGPT/: summarizeGPT.py  summarize_directory.py
tests/: Test_SummarizeGPT.py  conftest.py  test_cli.py  test_core.py  test_summarize_directory.py  test_summarize_gpt.py
